# arxivbot

./: .gitignore  README-zh.md  README.md  main.py  pyproject.toml
.github/workflows/: daily_arxiv.yml
data/: config.example.yaml  hunt_prompt.md  lark_card.json  paper.yaml  paper_history.json
src/: config.py
src/core/: app.py  fetcher.py  models.py  notifier.py  processor.py  scanner.py
